frontend/express/public/stylesheets/styles/blocks/_select.scss
@use "../base/colors" as c;
@use "../base/typography-variables" as t;
@use "../base/variables" as v;
@use "sass:map";

.cly-vue-select-x {
    .cly-vue-listbox {
        background-color: map.get(c.$colors, "white");
    }
    &__pop {
        .el-tabs {
            &__nav-wrap::after {
                background-color: transparent;
            }
            &__nav-scroll {
                padding: 0 14px;
            }
            &__header {
                margin: 0 0 1px 0;
                z-index: 2000;
                &::after {
                    // shadow
                    content: "";
                    position: absolute;
                    width: 100%;
                    height: 12px;
                    background: linear-gradient(180deg, #333c48 0%, rgba(51, 60, 72, 0.0001) 100%);
                    top: 40px;
                    opacity: 0.12;
                }
            }
            // &__active-bar {
            //     padding: 0 15px;
            //     left: -15px;
            // }
        }
        &--hidden-tabs {
            .el-tabs {
                &__header {
                    &::after {
                        top: 0px;
                    }
                }
                &__nav-scroll {
                    display: none;
                }
            }
        }
        // .cly-vue-listbox {
        //     padding: v.$select-dropdown-item-default-padding;
        // }
    }
    &__title {
        font-weight: 500;
        font-size: 16px;
        line-height: 24px;
        color: #333c48;
        padding-bottom: 16px;
    }
    &__header-slot {
        padding-bottom: 16px;
    }
    &__header {
        padding: 16px;
    }
    &__footer {
        border-top: 1px solid #ececec;
    }
    &__commit-section {
        float: right;
        margin: 16px;
    }

    &__pop--has-single-option {
        .cly-vue-select-x__header-slot {
            padding: 0;
        }
        .el-tabs__header::after {
            content: none;
        }
    }
}

.cly-vue-listbox {

    label.el-checkbox {
        width: 100%;
    }

    &.cly-vue-listbox--bordered {
        border-radius: 4px;
        border: 1px solid map.get(c.$colors, "warm-gray-30");
        // &.is-focus,
        // &:focus-within {
        //     border-color: map.get(c.$colors, "blue-100");
        // }
    }

    .cly-vue-listbox__no-data {
        padding: 8px;
        line-height: 20px;
        font-weight: t.$font-weight-primary;
        color: #333c48;
        font-size: 14px;
    }

    .el-checkbox-group {
        overflow: hidden;
    }

    .el-checkbox__label {
        line-height: 20px;
        font-weight: t.$font-weight-text;
        color: #333c48;
    }

    .el-checkbox__input.is-checked + .el-checkbox__label {
        color: #333C48;
    }

    .drag-handler {
        visibility: hidden;
        margin-right: 8px;
    }

    &__header {
        margin: 0 0 1px 0;
        z-index: 1997;
        border-bottom: 1px solid #ECECEC;
        position: relative;
        &::after {
            // shadow
            content: "";
            position: absolute;
            width: 100%;
            height: 12px;
            background: linear-gradient(180deg, #333c48 0%, rgba(51, 60, 72, 0.0001) 100%);
            top: 57px;
            left: 0;
            opacity: 0.12;
        }
    }

    .cly-vue-listbox__item {
        display: flex;
        cursor: pointer;
        align-items: center;
        justify-content: space-between;
        &.selected{
            background-color: v.$select-dropdown-item-default-selected-bg-color;
            * {
                color: v.$select-dropdown-item-default-selected-color;
            }
        }
    }

    .cly-vue-listbox__item-content {
        width: 100%;
    }

    &--disabled {
        .cly-vue-listbox__item {
            background-color: map.get(c.$colors, "warm-gray-20");
            * {
                color: map.get(c.$colors, "cool-gray-40");
            }

            &.selected {
                opacity: .5;
            }
        }
    }

    &:not(.cly-vue-listbox--disabled) {
        .cly-vue-listbox__item {
            &:not(.selected):hover {
                background-color: v.$select-dropdown-item-default-hover-bg-color;
                .drag-handler {
                    visibility: visible;
                }
                * {
                    color: v.$select-dropdown-item-default-hover-color;
                }
            }
        }
    }

    &--has-default-skin {
        .cly-vue-listbox__item {
            padding: v.$select-dropdown-item-default-padding;
            border-radius: 4px;
            line-height: v.$select-dropdown-item-default-height;
        }
    }
    &--has-jumbo-skin {
        .cly-vue-listbox__item {
            padding: v.$select-dropdown-item-default-padding;
            height: 55px;
            box-sizing: border-box;
            border-bottom: 1px solid #ECECEC;
            &.selected{
                border-left: 2px solid v.$select-dropdown-item-default-selected-bg-color;
                background-color: map.get(c.$colors, "warm-gray-20");
                * {
                    color: v.$select-dropdown-item-default-selected-bg-color;
                }
            }

            &:last-child {
                border-bottom: none;
            }
        }
    }
    &--has-margin {
        .cly-vue-listbox__item {
            margin: v.$select-dropdown-item-default-margin;
        }
    }
}

